Working take_snap function.

--- a/pyznap.conf
+++ b/pyznap.conf
@@ -1,10 +1,28 @@
-[tank]
+# Sample config file for pyznap. Do not give multiple/different config entries for subfilesystems.
+
+[tank/sub1]
 hourly = 24
 daily = 7
 weekly = 4
 monthly = 12
 yearly = 1
 snap = yes
+clean = yes
+
+[tank/sub2]
+daily = 30
+monthly = 12
+yearly = 1
+snap = yes
+clean = yes
+
+[tank/sub3]
+hourly = 48
+daily = 60
+weekly = 26
+monthly = 18
+yearly = 2
+snap = no
 clean = yes
 
 [test]
