Working clean_snap.

--- a/pyznap.conf
+++ b/pyznap.conf
@@ -1,6 +1,8 @@
-# Sample config file for pyznap. Do not give multiple/different config entries for subfilesystems.
+# Sample config file for pyznap. Subfilesystem with different strategies need to have the
+# keyword 'snap = no', else to many snapshots might be taken. For remote syncronisation
+# subfilesystems should not have a different strategy.
 
-[tank/sub1]
+[tank]
 hourly = 24
 daily = 7
 weekly = 4
@@ -9,11 +11,17 @@ yearly = 1
 snap = yes
 clean = yes
 
-[tank/sub2]
-daily = 30
+[tank/sub1]
+hourly = 0
+daily = 0
+weekly = 4
 monthly = 12
 yearly = 1
-snap = yes
+snap = no
+clean = yes
+
+[tank/sub2]
+snap = no
 clean = yes
 
 [tank/sub3]
@@ -24,12 +32,3 @@ monthly = 18
 yearly = 2
 snap = no
 clean = yes
-
-[test]
-hourly = 0
-daily = y
-monthly = 6
-weekly = 12
-yearly = 0
-snap = yes
-clean = no
