--- a/pyznap.conf
+++ b/pyznap.conf
@@ -1,6 +1,8 @@
 # Sample config file for pyznap. Subfilesystem with different strategies need to have the
 # keyword 'snap = no', else to many snapshots might be taken. For remote syncronisation
-# subfilesystems should not have a different strategy.
+# subfilesystems should not have less snapshots than the root. Always keep enough snapshots
+# on the destination. If there are no common snapshots the destination has to be destroyed and
+# a full stream has to be sent.
 
 [tank]
 hourly = 12
