Extended sample config.

--- a/pyznap.conf
+++ b/pyznap.conf
@@ -1,10 +1,10 @@
 ## Sample config file for pyznap. Save the config under /etc/pyznap/pyznap.conf or use the
-## --config flag. Subfilesystem with different strategies need to have the keyword 'snap = no',
-## else to many snapshots might be taken. For remote syncronisation subfilesystems should not
-## have less snapshots than the root. Always keep enough snapshots on the destination. If
-## there are no common snapshots the destination has to be destroyed and a full stream has to
-## be sent. ssh locations are always specified with 'ssh:port:user@host:poolname/filesystem'.
-## Port is optional, defaults to 22.
+## --config flag. Values get passed down recursively, so if you want a child filesystem to have
+## a different strategy you only need to specify the values that are different from the parent
+## filesystem. For remote syncronisation always keep enough snapshots on the destination. If there
+## are no common snapshots the destination has to be destroyed and a full stream has to be sent.
+## ssh locations are always specified with 'ssh:port:user@host:poolname/filesystem'.
+#
 #
 #
 #
@@ -21,6 +21,13 @@
 # clean = yes                           # Delete old snapshots on this filesystem
 # dest = backup/filesystem              # Backup this filesystem on this location
 #
+#
+## Missing values will be filled automatically if parent is in config
+# [rpool/filesystem/data]
+# hourly = 12                           # Strategy will be hourly=12, daily=7, weekly=4, ...
+# dest = data/backup                    # Send child to another location as well
+#
+#
 ## Backup location
 # [backup/filesystem]
 # hourly = 48                           # Keep more older snapshots in backup location
@@ -36,7 +43,7 @@
 # dest_keys = /home/user/.ssh/id_rsa    # Provide key for ssh login. If none given, look in home dir
 #
 ## You can also take snapshots on a remote, but not sending to another dest
-# [ssh:22:user@host:pool/data]
+# [ssh:22:user@host:rpool/data]
 # key = /home/user/.ssh/id_rsa          # Provide key for ssh login. If none given, look in home dir
 # hourly = 24
 # snap = yes
