--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -10,7 +10,7 @@
 #
 ## Some example configs:
 #
-## Take regular snapsthos on a filesystem
+## Take regular snapshots on a filesystem
 # [rpool/filesystem]
 # frequent = 4                          # Keep 4 quarter-hourly snapshots
 # hourly = 24                           # Keep 24 hourly snapshots
