Added comment in sample config on which lines get ignored.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -4,7 +4,8 @@
 ## filesystem. For remote syncronisation always keep enough snapshots on the destination. If there
 ## are no common snapshots the destination has to be destroyed and a full stream has to be sent.
 ## ssh locations are always specified with 'ssh:port:user@host:poolname/filesystem'.
-#
+## Remove the comments at the end of the lines in your config, as they will not be ignored. Only
+## lines starting with '#' will be ignored.
 #
 #
 #
