Modified readme and sample config due to change in 'frequent' snapshots.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -13,7 +13,7 @@
 #
 ## Take regular snapshots on a filesystem
 # [rpool/filesystem]
-# frequent = 4                          # Keep 4 quarter-hourly snapshots
+# frequent = 4                          # Keep 4 frequent snapshots
 # hourly = 24                           # Keep 24 hourly snapshots
 # daily = 7                             # Keep 7 daily snapshots
 # weekly = 4                            # Keep 4 weekly snapshots
