Added compress flag to README and config.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -43,6 +43,7 @@
 # clean = yes
 # dest = ssh:22:user@host:backup/data   # Specify ssh destination
 # dest_keys = /home/user/.ssh/id_rsa    # Provide key for ssh login. If none given, look in home dir
+# compress = gzip                       # Use gzip compression for sending over ssh
 #
 ## You can also take snapshots on a remote, but not sending to another dest
 # [ssh:22:user@host:rpool/data]
@@ -58,3 +59,4 @@
 # clean = yes
 # dest = backup/data, ssh::user@host0:backup/data, ssh:22:user@host1:backup/data
 # dest_keys = /home/user/.ssh/id_rsa, /home/user/.ssh/id_rsa
+# compress = lzop, lz4
