More info on compress option. Removed paramiko dependency.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -59,4 +59,4 @@
 # clean = yes
 # dest = backup/data, ssh::user@host0:backup/data, ssh:22:user@host1:backup/data
 # dest_keys = /home/user/.ssh/id_rsa, /home/user/.ssh/id_rsa
-# compress = lzop, lz4
+# compress = lzop, none
