Added example config for snapshot pull. Extended readme and added usage examples.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -45,12 +45,14 @@
 # dest_keys = /home/user/.ssh/id_rsa    # Provide key for ssh login. If none given, look in home dir
 # compress = gzip                       # Use gzip compression for sending over ssh
 #
-## You can also take snapshots on a remote, but not sending to another dest
+## You can also take snapshots on a remote and pull snapshots from there
 # [ssh:22:user@host:rpool/data]
 # key = /home/user/.ssh/id_rsa          # Provide key for ssh login. If none given, look in home dir
 # hourly = 24
 # snap = yes
 # clean = yes
+# dest = tank/data
+# compress = lz4
 #
 ## You can give multiple dest. Filesystem will be sent to all of them
 # [tank/data]
