Expanded readme on exclude rules and added sample config.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -22,6 +22,7 @@
 # snap = yes                            # Take snapshots on this filesystem
 # clean = yes                           # Delete old snapshots on this filesystem
 # dest = backup/filesystem              # Backup this filesystem on this location
+# exclude = rpool/filesystem/data/*     # Exclude these datasets for pyznap send
 #
 #
 ## Missing values will be filled automatically if parent is in config
@@ -62,3 +63,4 @@
 # dest = backup/data, ssh::user@host0:backup/data, ssh:22:user@host1:backup/data
 # dest_keys = /home/user/.ssh/id_rsa, /home/user/.ssh/id_rsa
 # compress = lzop, none
+# exclude = tank/data/home, */home */media/* */logs
