Extended README and config about -w flag.

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -63,4 +63,5 @@
 # dest = backup/data, ssh::user@host0:backup/data, ssh:22:user@host1:backup/data
 # dest_keys = /home/user/.ssh/id_rsa, /home/user/.ssh/id_rsa
 # compress = lzop, none
+# raw_send = no, yes
 # exclude = tank/data/home, */home */media/* */logs
