Add dry_run mode and update doc

--- a/pyznap/config/pyznap.conf
+++ b/pyznap/config/pyznap.conf
@@ -4,8 +4,7 @@
 ## filesystem. For remote syncronisation always keep enough snapshots on the destination. If there
 ## are no common snapshots the destination has to be destroyed and a full stream has to be sent.
 ## ssh locations are always specified with 'ssh:port:user@host:poolname/filesystem'.
-## Remove the comments at the end of the lines in your config, as they will not be ignored. Only
-## lines starting with '#' will be ignored.
+## Lines starting with '#' will be ignored.
 #
 #
 #
@@ -21,6 +20,8 @@
 # yearly = 1                            # Keep 1 yearly snapshot
 # snap = yes                            # Take snapshots on this filesystem
 # clean = yes                           # Delete old snapshots on this filesystem
+# prune_sanoid = no                     # Prune sanoid snapshots yes|no
+# dry_run = yes                         # Use dry-run mode? yes|no
 # dest = backup/filesystem              # Backup this filesystem on this location
 # exclude = rpool/filesystem/data/*     # Exclude these datasets for pyznap send
 #
